# shanghaixunji

./: .env.example  .gitignore  README.md  deploy.ps1  package-lock.json  pytest.ini  vercel.json  wrangler.toml  参赛帖-山海寻迹.md  录制脚本-抖音3条.md  录制脚本-演示视频.md
.github/workflows/: assets.yml  ci.yml
3d-model-free-alternatives/: 3d-model-free-alternatives.html
academic/: integration_notes.md
academic/dishan-kaozheng/: shanhaijing-dishan-kaozheng.html
api/: _shared.ts  chat.ts  tts.ts
apps/web/: .env.local.example  .npmrc  dev-server-tts.ts  dev-server.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  prebuild.cjs  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
assets/: manifest.json
data/: expand-creatures.ts  migrate-from-legacy.ts
data/extracted/: creatures_raw.json
data/geo/: province_assignments.json
data/raw/: shanhaijing_full_text.txt
data/verified/: creatures_patch.json  creatures_verified.json
docs/: cloudflare-deploy.md
functions/api/: chat.ts
pipelines/depth/: README.md  check_quality.py  comfyui_workflow.json  depth_to_normal.py  generate_depth.py  generate_depth_placeholder.py  requirements.txt
pipelines/extract/: extract_creatures.py  extract_prompts.py  requirements.txt
pipelines/image/: generate_creature_art.py  requirements.txt
pipelines/manifest/: build_manifest.py
pipelines/model3d/: README.md  (+2 more)
pipelines/tts/: dialect_map.json  generate_tts.py  pyproject.toml  requirements.txt  run_tts_batch.py  tts_input.json
pipelines/tts/tests/: test_batch_tts.py  test_generate_tts.py
(+214 files in other folders)
